--- a/templates/base.html
+++ b/templates/base.html
@@ -1,31 +1,10 @@
 <!DOCTYPE html>
 <html lang="ua">
-<head>
-    {% load staticfiles %}
-    <title>ТОВ "Агрохолдинг 2012"</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="keywords" content="Агрохолдинг 2012, агрохолдинг, аграрії, паї, земля" />
-    <!-- css links -->
-    <link href={% static "css/bootstrap.min.css" %} rel="stylesheet" type="text/css" media="all" />
-    <link href={% static "css/font-awesome.min.css" %} rel="stylesheet" type="text/css" media="all" />
-    <link href={% static "css/typo.css" %} rel="stylesheet" type="text/css" media="all" />
-    <link href={% static "css/hoverex-all.css" %} rel="stylesheet" type="text/css" media="all" />
-    <link href={% static "css/inner.css" %} rel="stylesheet" type="text/css" media="all" />
-    <link href={% static "css/caption-hover.css" %} rel="stylesheet" type="text/css" media="all" />
-    <link href={% static "css/circle-hover.css" %} rel="stylesheet" type="text/css" media="all" />
-    <link href={% static "css/slider.css" %} rel="stylesheet" type="text/css" media="all" />
-    <link href={% static "css/style.css" %} rel="stylesheet" type="text/css" media="all" />
-    <!-- /css links -->
-    <!-- font files -->
-    <link href='//fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet' type='text/css'>
-    <link href='//fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
-    <!-- font files -->
-    <!-- js files  -->
-    <script src={% static "js/SmoothScroll.min.js" %}></script>
-    <script type="text/javascript" src={% static "js/modernizr.custom.js" %}></script>
-<!-- /js files -->
-</head>
+
+{% block head %}
+    {% block title %}
+    {% endblock title %}
+{% endblock head %}
 
 {% block body %}
 {% endblock body %}
@@ -79,6 +58,8 @@
 		</a>
     </div>
 </footer>
+{% block js %}
+{% endblock js %}
 
 </body>
 </html>
