--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -1,69 +1,99 @@
 {% extends 'base.html' %}
-
+{% block head %}
+<head>
+    {% load staticfiles %}
+<title>ТОВ "Агрохолдинг 2012"</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="keywords" content="Агрохолдинг 2012, агрохолдинг, аграрії, паї, земля" />
+<!-- css links -->
+<link href={% static "css/bootstrap.min.css" %} rel="stylesheet" type="text/css" media="all" />
+<link href={% static "css/font-awesome.min.css" %} rel="stylesheet" type="text/css" media="all" />
+<link href={% static "css/typo.css" %} rel="stylesheet" type="text/css" media="all" />
+<link href={% static "css/testimonial.css" %} rel="stylesheet" type="text/css" media="all" />
+<link href={% static "css/hoverex-all.css" %} rel="stylesheet" type="text/css" media="all" />
+<link href={% static "css/inner.css" %} rel="stylesheet" type="text/css" media="all" />
+<link href={% static "css/pogo-slider.min.css" %} rel="stylesheet" type="text/css" media="all" />
+<link href={% static "css/caption-hover.css" %} rel="stylesheet" type="text/css" media="all" />
+<link href={% static "css/circle-hover.css" %} rel="stylesheet" type="text/css" media="all" />
+<link href={% static "css/slider.css" %} rel="stylesheet" type="text/css" media="all" />
+<link href={% static "css/style.css" %} rel="stylesheet" type="text/css" media="all" />
+<!-- /css links -->
+<!-- font files -->
+<link href='//fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,700,800,900' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+<!-- font files -->
+<!-- js files  -->
+<script src={% static "js/SmoothScroll.min.js" %}></script>
+<script type="text/javascript" src={% static "js/modernizr.custom.js" %}></script>
+<!-- /js files -->
+</head>
+{% endblock head %}
 {% block body %}
-        {% load staticfiles %}
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 <!-- Fixed navbar -->
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-        <!--<object data="images/AGROHOLDING_2012_logo.svg"-->
-                <!--type="image/svg+xml" width="240" href="index.html"></object>-->
-        <a href="/"><img src={% static "images/AGROHOLDING_2012_logo.svg" %} width="240"></a>
-      <!--<a class="navbar-brand" href="index.html" >Агрохолдинг 2012</a>-->
-    </div>
-    <div id="navbar" class="navbar-collapse collapse">
-        <ul class="nav navbar-nav navbar-right">
-            <li><a href="/">Головна</a></li>
-            <li class="active"><a href="/about/">Про нас</a></li>
-            <li><a href="blog.html">Новини</a></li>
-            <li><a href="gallery.html">Галерея</a></li>
-            <li><a href="typo.html">Корисна інформація</a></li>
-            <li><a href="contact.html">Контакти</a></li>
-      </ul>
-    </div><!--/.nav-collapse -->
-  </div>
-</nav>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Мобільна навігація</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+			<!--<object data="images/AGROHOLDING_2012_logo.svg"-->
+					<!--type="image/svg+xml" width="240" href="index.html"></object>-->
+            <a href="/"><img src={% static "images/AGROHOLDING_2012_logo.svg" %} width="240"></a>
+          <!--<a class="navbar-brand" href="index.html" >Агрохолдинг 2012</a>-->
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="/">Головна</a></li>
+				<li class="active"><a href="/about/">Про нас</a></li>
+				<li><a href="blog.html">Новини</a></li>
+				<li><a href="gallery.html">Галерея</a></li>
+				<li><a href="typo.html">Корисна інформація</a></li>
+				<li><a href="contact.html">Контакти</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </nav>
 <!-- /Fixed navbar -->
 <!-- banner section -->
 <div class="pogoSlider" id="js-main-slider">
-	<div class="pogoSlider-slide" data-transition="barRevealDown" data-duration="1000"  style="background-image:url(../../../static/images/banner1-1.jpg);">
+	<div class="pogoSlider-slide" data-transition="barRevealDown" data-duration="1000"  style="background-image:url(../../static/images/banner1-1.jpg);">
 		<div class="pogoSlider-slide-element">
-			<h3>Наші цілі</h3>
+			<h3>Розвиток села - розвиток України</h3>
 		</div>
 	</div>
-	<div class="pogoSlider-slide" data-transition="blocksReveal" data-duration="1000" style="background-image:url(../../../static/images/banner2-2.jpg);">
+	<div class="pogoSlider-slide" data-transition="blocksReveal" data-duration="1000" style="background-image:url(../../static/images/banner2-2.jpg);">
 		<div class="pogoSlider-slide-element">
-			<h3>Наші досягнення</h3>
+			<h3>Наша ціль - радість селян</h3>
 		</div>
 	</div>
-	<div class="pogoSlider-slide" data-transition="barRevealDown" data-duration="1000" style="background-image:url(../../../static/images/banner3-3.jpg);">
+	<div class="pogoSlider-slide" data-transition="barRevealDown" data-duration="1000" style="background-image:url(../../static/images/banner3-3.jpg);">
 		<div class="pogoSlider-slide-element">
-			<h3>Наша команда</h3>
+			<h3>Праця біля землі - доктрина України</h3>
 		</div>
 	</div>
-	<div class="pogoSlider-slide" data-transition="blocksReveal" data-duration="1000"  style="background-image:url(../../../static/images/banner4-4.jpg);">
+	<div class="pogoSlider-slide" data-transition="blocksReveal" data-duration="1000"  style="background-image:url(../../static/images/banner4-4.jpg);">
 		<div class="pogoSlider-slide-element">
-			<h3>Наші друзі </h3>
+			<h3>Без села, України не існує</h3>
 		</div>
 	</div>
 </div>
 <!-- /banner section -->
 <section class="about-us" id="about">
-	<h3 class="text-center slideanim">About Us</h3>
+	<h3 class="text-center slideanim">Про нас</h3>
     <div class="container">
         <div class="row">
             <div class="col-lg-4 col-lg-offset-2 slideanim">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <p>ТОВ "Агрохолдинг 2012" - молода, інноваційна компанія, що вибрала цей складний для країни час, для того, щоб зробити свій вклад в розбудові
+                країни, і ми вирішили починати саме з села</p>
             </div>
             <div class="col-lg-4 slideanim">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                <p>ТОВ "Агрохолдинг 2012" - молода, інноваційна компанія, що вибрала цей складний для країни час, для того, щоб зробити свій вклад в розбудові
+                країни, і ми вирішили починати саме з села</p>
             </div>
         </div>
     </div>
@@ -75,7 +105,7 @@
 			<p class="text-center slideanim">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 slideanim">
 				<div class="he-wrap tpl6 slideanim">
-					<img src="images/team1.jpg" alt="Vegetable Farm" title="Vegetable Farm">
+					<img src={% static "images/team1.jpg" %} alt="Vegetable Farm" title="Vegetable Farm">
 					<div class="he-view">
 						<div class="bg a0" data-animate="fadeIn">
 							<h3 class="a1" data-animate="fadeInDown">Contact Me:</h3>
@@ -89,7 +119,7 @@
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 slideanim">
 				<div class="he-wrap tpl6 slideanim">
-					<img src="images/team2.jpg" alt="Vegetable Farm" title="Vegetable Farm">
+					<img src={% static "images/team2.jpg" %} alt="Vegetable Farm" title="Vegetable Farm">
 					<div class="he-view">
 						<div class="bg a0" data-animate="fadeIn">
 							<h3 class="a1" data-animate="fadeInDown">Contact Me:</h3>
@@ -103,7 +133,7 @@
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 slideanim">
 				<div class="he-wrap tpl6 slideanim">
-					<img src="images/team3.jpg" alt="Vegetable Farm" title="Vegetable Farm">
+					<img src={% static "images/team3.jpg" %} alt="Vegetable Farm" title="Vegetable Farm">
 					<div class="he-view">
 						<div class="bg a0" data-animate="fadeIn">
 							<h3 class="a1" data-animate="fadeInDown">Contact Me:</h3>
@@ -117,7 +147,7 @@
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 slideanim">
 				<div class="he-wrap tpl6 slideanim">
-					<img src="images/team4.jpg" alt="Vegetable Farm" title="Vegetable Farm">
+					<img src={% static "images/team4.jpg" %} alt="Vegetable Farm" title="Vegetable Farm">
 					<div class="he-view">
 						<div class="bg a0" data-animate="fadeIn">
 							<h3 class="a1" data-animate="fadeInDown">Contact Me:</h3>
@@ -140,7 +170,7 @@
 			<li>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 				<div class="cd-author">
-					<img src="images/test-img1.jpg" alt="Author image">
+					<img src={% static "images/test-img1.jpg" %} alt="Author image">
 					<ul class="cd-author-info">
 						<li>John Cena</li>
 						<li>CEO, Company</li>
@@ -150,7 +180,7 @@
 			<li>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus ea, perferendis error repudiandae numquam dolor fuga temporibus. Unde omnis, consequuntur.</p>
 				<div class="cd-author">
-					<img src="images/test-img2.jpg" alt="Author image">
+					<img src={% static "images/test-img2.jpg" %} alt="Author image">
 					<ul class="cd-author-info">
 						<li>Mark</li>
 						<li>Designer, Company</li>
@@ -160,7 +190,7 @@
 			<li>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam totam nulla est, illo molestiae maxime officiis, quae ad, ipsum vitae deserunt molestias eius alias.</p>
 				<div class="cd-author">
-					<img src="images/test-img3.jpg" alt="Author image">
+					<img src={% static "images/test-img3.jpg" %} alt="Author image">
 					<ul class="cd-author-info">
 						<li>Natasha</li>
 						<li>CEO, Company</li>
@@ -176,7 +206,7 @@
 				<li class="cd-testimonials-item">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit totam saepe iste maiores neque animi molestias nihil illum nisi temporibus.</p>
 					<div class="cd-author">
-						<img src="images/test-img1.jpg" alt="Author image">
+						<img src={% static "images/test-img1.jpg" %} alt="Author image">
 						<ul class="cd-author-info">
 							<li>John Cena</li>
 							<li>CEO, Company</li>
@@ -186,7 +216,7 @@
 				<li class="cd-testimonials-item">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore nostrum nisi, doloremque error hic nam nemo doloribus porro impedit perferendis. Tempora, distinctio hic suscipit. At ullam eaque atque recusandae modi fugiat voluptatem laborum laboriosam rerum, consequatur reprehenderit omnis, enim pariatur nam, quidem, quas vel reiciendis aspernatur consequuntur. Commodi quasi enim, nisi alias fugit architecto, doloremque, eligendi quam autem exercitationem consectetur.</p>
 					<div class="cd-author">
-						<img src="images/test-img2.jpg" alt="Author image">
+						<img src={% static "images/test-img2.jpg" %} alt="Author image">
 						<ul class="cd-author-info">
 							<li>Mark</li>
 							<li>Designer, Company</li>
@@ -196,7 +226,7 @@
 				<li class="cd-testimonials-item">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem quibusdam eveniet, molestiae laborum voluptatibus minima hic quasi accusamus ut facere, eius expedita, voluptatem? Repellat incidunt veniam quaerat, qui laboriosam dicta. Quidem ducimus laudantium dolorum enim qui at ipsum, a error.</p>
 					<div class="cd-author">
-						<img src="images/test-img3.jpg" alt="Author image">
+						<img src={% static "images/test-img3.jpg" %} alt="Author image">
 						<ul class="cd-author-info">
 							<li>Natasha</li>
 							<li>CEO, Company</li>
@@ -206,7 +236,7 @@
 				<li class="cd-testimonials-item">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Libero voluptates officiis tempore quae officia! Beatae quia deleniti cum corporis eos perferendis libero reiciendis nemo iusto accusamus, debitis tempora voluptas praesentium repudiandae laboriosam excepturi laborum, nisi optio repellat explicabo, incidunt ex numquam. Ullam perferendis officiis harum doloribus quae corrupti minima quia, aliquam nostrum expedita pariatur maxime repellat, voluptas sunt unde, inventore.</p>
 					<div class="cd-author">
-						<img src="images/test-img4.jpg" alt="Author image">
+						<img src={% static "images/test-img4.jpg" %} alt="Author image">
 						<ul class="cd-author-info">
 							<li>Elizabeth</li>
 							<li>CEO, Company</li>
@@ -216,7 +246,7 @@
 				<li class="cd-testimonials-item">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit totam saepe iste maiores neque animi molestias nihil illum nisi temporibus.</p>
 					<div class="cd-author">
-						<img src="images/test-img5.jpg" alt="Author image">
+						<img src={% static "images/test-img5.jpg" %} alt="Author image">
 						<ul class="cd-author-info">
 							<li>Diana</li>
 							<li>CEO, Company</li>
@@ -226,7 +256,7 @@
 				<li class="cd-testimonials-item">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perspiciatis quia quas, quis illo adipisci voluptate ex harum iste commodi nulla dolor. Eius ratione quod ab!</p>
 					<div class="cd-author">
-						<img src="images/test-img6.jpg" alt="Author image">
+						<img src={% static "images/test-img6.jpg" %} alt="Author image">
 						<ul class="cd-author-info">
 							<li>Britney Spears</li>
 							<li>CEO, Company</li>
@@ -236,7 +266,7 @@
 				<li class="cd-testimonials-item">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, dignissimos iure rem fugiat consequuntur officiis.</p>
 					<div class="cd-author">
-						<img src="images/test-img7.jpg" alt="Author image">
+						<img src={% static "images/test-img7.jpg" %} alt="Author image">
 						<ul class="cd-author-info">
 							<li>Lady Gaga</li>
 							<li>CEO, Company</li>
@@ -246,7 +276,7 @@
 				<li class="cd-testimonials-item">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At temporibus tempora necessitatibus reiciendis provident deserunt maxime sit id. Dicta aut voluptatibus placeat quibusdam vel, dolore.</p>
 					<div class="cd-author">
-						<img src="images/test-img8.jpg" alt="Author image">
+						<img src={% static "images/test-img8.jpg" %} alt="Author image">
 						<ul class="cd-author-info">
 							<li>Whitney</li>
 							<li>CEO, Company</li>
@@ -256,7 +286,7 @@
 				<li class="cd-testimonials-item">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis iusto sapiente, excepturi velit, beatae possimus est tenetur cumque fugit tempore dolore fugiat! Recusandae, vel suscipit? Perspiciatis non similique sint suscipit officia illo, accusamus dolorum, voluptate vitae quia ea amet optio magni voluptatem nemo, natus nihil.</p>
 					<div class="cd-author">
-						<img src="images/test-img9.jpg" alt="Author image">
+						<img src={% static "images/test-img9.jpg" %} alt="Author image">
 						<ul class="cd-author-info">
 							<li>Kate Winslet</li>
 							<li>CEO, Company</li>
@@ -266,7 +296,7 @@
 				<li class="cd-testimonials-item">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor quasi officiis pariatur, fugit minus omnis animi ut assumenda quod commodi, ad a alias maxime unde suscipit magnam, voluptas laboriosam ipsam quibusdam quidem, dolorem deleniti id.</p>
 					<div class="cd-author">
-						<img src="images/test-img10.jpg" alt="Author image">
+						<img src={% static "images/test-img10.jpg" %} alt="Author image">
 						<ul class="cd-author-info">
 							<li>Cindy Crawford</li>
 							<li>CEO, Company</li>
@@ -276,7 +306,7 @@
 				<li class="cd-testimonials-item">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At temporibus tempora necessitatibus reiciendis provident deserunt maxime sit id. Dicta aut voluptatibus placeat quibusdam vel, dolore.</p>
 					<div class="cd-author">
-						<img src="images/test-img11.jpg" alt="Author image">
+						<img src={% static "images/test-img11.jpg" %} alt="Author image">
 						<ul class="cd-author-info">
 							<li>Megan Fox</li>
 							<li>CEO, Company</li>
@@ -286,7 +316,7 @@
 				<li class="cd-testimonials-item">
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque tempore ipsam, eos suscipit nostrum molestias reprehenderit, rerum amet cum similique a, ipsum soluta delectus explicabo nihil repellat incidunt! Minima magni possimus mollitia deserunt facere, tempore earum modi, ea ipsa dicta temporibus suscipit quidem ut quibusdam vero voluptatibus nostrum excepturi explicabo nulla harum, molestiae alias. Ab, quidem rem fugit delectus quod.</p>
 					<div class="cd-author">
-						<img src="images/test-img12.jpg" alt="Author image">
+						<img src={% static "images/test-img12.jpg" %} alt="Author image">
 						<ul class="cd-author-info">
 							<li>Monica Belucci</li>
 							<li>CEO, Company</li>
@@ -298,7 +328,11 @@
 		<a href="#0" class="close-btn">Close</a>
 	</div> <!-- cd-testimonials-all -->
 </section>
-    <script src={% static "js/jquery.min.js" %}></script>
+{% endblock body %}
+<!-- Footer -->
+{% block js %}
+<!-- js files -->
+<script src={% static "js/jquery.min.js" %}></script>
 <script src={% static "js/bootstrap.min.js" %}></script>
 <script src={% static "js/classie.js" %}></script>
 <script src={% static "js/TweenMax.min.js" %}></script>
@@ -345,4 +379,7 @@ $(window).scroll(function() {
 <script src={% static "js/masonry.pkgd.min.js" %}></script>
 <script src={% static "js/jquery.flexslider-min.js" %}></script>
 <script src={% static "js/main.js" %}></script>
-{% endblock body %}
+{% endblock js %}
+<!-- /js files -->
+</body>
+</html>
