--- a/templates/base.html
+++ b/templates/base.html
@@ -15,11 +15,11 @@
         <div class="container">
             <div class="row">
                 <div class="footer-col col-md-4">
-                    <h4>Location</h4>
-                    <p>3481 Melrose Place<br>Beverly Hills, Chicago 90210</p>
+                    <h4>Адреса</h4>
+                    <p>29000 Україна, м. Хмельницький, вул. Свободи, 79<br>тел. (0382)777-12-0</p>
                 </div>
                 <div class="footer-col col-md-4">
-                    <h4>Around the Web</h4>
+                    <h4>Ми в інтернеті</h4>
                     <ul class="list-inline">
                         <li>
                             <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
@@ -39,8 +39,8 @@
                     </ul>
                 </div>
                 <div class="footer-col col-md-4">
-                    <h4>About Vegetable Farm</h4>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                    <h4>Кредо ТОВ "Агрохолдинг 2012"</h4>
+                    <p>Наші цілі, щоб українське село було бажаним для життя та праці в ньому, і ми підтримуємо напрямок України, як аграрної держави</p>
                 </div>
             </div>
         </div>
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <p>© 2016 Vegetable Farm. All Rights Reserved | Design by <a href="https://w3layouts.com/" target="_blank">W3layouts</a></p>
+                    <p>© 2016 ТОВ "Агрохолдинг 2012". | Розробка сайту <a href="https://facebook.com/vova.zulu/" target="_blank">Volodumir Gumenyuk</a></p>
                 </div>
             </div>
         </div>
@@ -58,6 +58,7 @@
 		</a>
     </div>
 </footer>
+<!-- /Footer -->
 {% block js %}
 {% endblock js %}
 
