--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -101,49 +101,49 @@
 <section class="team-w3ls">
 	<div class="container">
 		<div class="row centered">
-			<h3 class="text-center slideanim">MEET OUR TEAM</h3>
-			<p class="text-center slideanim">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+			<h3 class="text-center slideanim">НАША КОМАНДА</h3>
+			<p class="text-center slideanim">Мабуть найкраща команда в світі :)</p>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 slideanim">
 				<div class="he-wrap tpl6 slideanim">
 					<img src={% static "images/team1.jpg" %} alt="Vegetable Farm" title="Vegetable Farm">
 					<div class="he-view">
 						<div class="bg a0" data-animate="fadeIn">
-							<h3 class="a1" data-animate="fadeInDown">Contact Me:</h3>
+							<h3 class="a1" data-animate="fadeInDown">Зв’язатись:</h3>
 							<a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-envelope"></i></a>
 							<a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-twitter"></i></a>
 						</div>
 					</div>
 				</div>
-				<h4 class="slideanim">Elizabeth</h4>
-				<p class="team-agile slideanim">CEO</p>
+				<h4 class="slideanim">Василь Іванович<br>Мороз</h4>
+				<p class="team-agile slideanim">ГЕНЕРАЛЬНИЙ ДИРЕКТОР</p>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 slideanim">
 				<div class="he-wrap tpl6 slideanim">
 					<img src={% static "images/team2.jpg" %} alt="Vegetable Farm" title="Vegetable Farm">
 					<div class="he-view">
 						<div class="bg a0" data-animate="fadeIn">
-							<h3 class="a1" data-animate="fadeInDown">Contact Me:</h3>
+							<h3 class="a1" data-animate="fadeInDown">ЗВ’ЯЗАТИСЬ:</h3>
 							<a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-envelope"></i></a>
 							<a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-twitter"></i></a>
 						</div>
 					</div>
 				</div>
-				<h4 class="slideanim">Max Payne</h4>
-				<p class="team-agile slideanim">MANAGER</p>
+				<h4 class="slideanim">Юрій Віталійович<br>Коваль</h4>
+				<p class="team-agile slideanim">ФІНАНСОВИЙ ДИРЕКТОР</p>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 slideanim">
 				<div class="he-wrap tpl6 slideanim">
 					<img src={% static "images/team3.jpg" %} alt="Vegetable Farm" title="Vegetable Farm">
 					<div class="he-view">
 						<div class="bg a0" data-animate="fadeIn">
-							<h3 class="a1" data-animate="fadeInDown">Contact Me:</h3>
+							<h3 class="a1" data-animate="fadeInDown">ЗВ’ЯЗАТИСЬ:</h3>
 							<a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-envelope"></i></a>
 							<a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-twitter"></i></a>
 						</div>
 					</div>
 				</div>
-				<h4 class="slideanim">Diana</h4>
-				<p class="team-agile slideanim">DIRECTOR</p>
+				<h4 class="slideanim">Юрій Віталійович Маньковський</h4>
+				<p class="team-agile slideanim">ЗАСТУПНИК ДИРЕКТОРА ПО ЗЕМЕЛЬНИМ ПИТАННЯМ</p>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 slideanim">
 				<div class="he-wrap tpl6 slideanim">
