--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -215,13 +215,13 @@
 						<div class="ch-info-front ch-img-4"></div>
 						<div class="ch-info-back">
 							<h5>Врожай</h5>
-							<p>Якісний підхід, якісний врожай</p>
+							<p>Якісний підхід, це якісний врожай</p>
 						</div>
 					</div>
 				</div>
 			</div>
 			<h4 class="slideanim">Врожай</h4>
-			<p class="slideanim">Якісний підхід, якісний врожай</p>
+			<p class="slideanim">Якісний підхід, це якісний врожай</p>
 			<a class="btn btn-lg btn-outline slideanim" href="gallery-item.html" role="button">Детальніше &raquo;</a>
 		</li>
 	</ul>
@@ -514,6 +514,7 @@
 {% endblock body %}
 <!-- Footer -->
 {% block js %}
+    {% load staticfiles %}
 <!-- js files -->
 <script src={% static "js/jquery.min.js" %}></script>
 <script src={% static "js/bootstrap.min.js" %}></script>
