--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -52,7 +52,7 @@
 				<li class="active"><a href="/about/">Про нас</a></li>
 				<li><a href="blog.html">Новини</a></li>
 				<li><a href="gallery.html">Галерея</a></li>
-				<li><a href="typo.html">Корисна інформація</a></li>
+				<li><a href="typo.html">Аренда землі</a></li>
 				<li><a href="contact.html">Контакти</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -105,7 +105,7 @@
 			<p class="text-center slideanim">Мабуть найкраща команда в світі :)</p>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 slideanim">
 				<div class="he-wrap tpl6 slideanim">
-					<img src={% static "images/team1.jpg" %} alt="Vegetable Farm" title="Vegetable Farm">
+					<img src={% static "images_agroholding/team1_agro1.jpg" %} alt="Vegetable Farm" title="Vegetable Farm">
 					<div class="he-view">
 						<div class="bg a0" data-animate="fadeIn">
 							<h3 class="a1" data-animate="fadeInDown">Зв’язатись:</h3>
@@ -119,7 +119,7 @@
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 slideanim">
 				<div class="he-wrap tpl6 slideanim">
-					<img src={% static "images/team2.jpg" %} alt="Vegetable Farm" title="Vegetable Farm">
+					<img src={% static "images_agroholding/team2_agro.jpg" %} alt="Vegetable Farm" title="Vegetable Farm">
 					<div class="he-view">
 						<div class="bg a0" data-animate="fadeIn">
 							<h3 class="a1" data-animate="fadeInDown">ЗВ’ЯЗАТИСЬ:</h3>
@@ -129,11 +129,11 @@
 					</div>
 				</div>
 				<h4 class="slideanim">Юрій Віталійович<br>Коваль</h4>
-				<p class="team-agile slideanim">ФІНАНСОВИЙ ДИРЕКТОР</p>
+				<p class="team-agile slideanim">ЗАСТУПНИК ГЕНЕРАЛЬНОГО ДИРЕКТОРА</p>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 slideanim">
 				<div class="he-wrap tpl6 slideanim">
-					<img src={% static "images/team3.jpg" %} alt="Vegetable Farm" title="Vegetable Farm">
+					<img src={% static "images_agroholding/team3_agro.jpg" %} alt="Vegetable Farm" title="Vegetable Farm">
 					<div class="he-view">
 						<div class="bg a0" data-animate="fadeIn">
 							<h3 class="a1" data-animate="fadeInDown">ЗВ’ЯЗАТИСЬ:</h3>
@@ -142,29 +142,29 @@
 						</div>
 					</div>
 				</div>
-				<h4 class="slideanim">Юрій Віталійович Маньковський</h4>
-				<p class="team-agile slideanim">ЗАСТУПНИК ДИРЕКТОРА ПО ЗЕМЕЛЬНИМ ПИТАННЯМ</p>
+				<h4 class="slideanim">Юрій Віталійович<br>Маньковський</h4>
+				<p class="team-agile slideanim">КЕРІВНИК ЗЕМЕЛЬНОГО ВІДДІЛУ</p>
 			</div>
 			<div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 slideanim">
 				<div class="he-wrap tpl6 slideanim">
-					<img src={% static "images/team4.jpg" %} alt="Vegetable Farm" title="Vegetable Farm">
+					<img src={% static "images_agroholding/team4_agro.jpg" %} alt="Vegetable Farm" title="Vegetable Farm">
 					<div class="he-view">
 						<div class="bg a0" data-animate="fadeIn">
-							<h3 class="a1" data-animate="fadeInDown">Contact Me:</h3>
+							<h3 class="a1" data-animate="fadeInDown">ЗВ’ЯЗАТИСЬ:</h3>
 							<a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-envelope"></i></a>
 							<a href="#" class="dmbutton a2" data-animate="fadeInUp"><i class="fa fa-twitter"></i></a>
 						</div>
 					</div>
 				</div>
-				<h4 class="slideanim">Rose</h4>
-				<p class="team-agile slideanim">FOUNDER</p>
+				<h4 class="slideanim">Михайло Дмитрович<br>Бойко</h4>
+				<p class="team-agile slideanim">ЗАСТУПНИК ДИРЕКТОРА З СОЦІАЛЬНОЇ ПОЛІТИКИ</p>
 			</div>
 		</div>
 	</div>
 </section>
 <section class="testimonial">
-	<h3 class="text-center slideanim">Our Customers Word</h3>
-	<p class="text-center slideanim">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+	<h3 class="text-center slideanim">Наші цитати</h3>
+	<p class="text-center slideanim">Улюблені цитати наших співробітників</p>
 	<div class="cd-testimonials-wrapper cd-container slideanim">
 		<ul class="cd-testimonials">
 			<li>
