--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -50,7 +50,7 @@
 				<li><a href="/about/">Про нас</a></li>
 				<li><a href="blog.html">Новини</a></li>
 				<li><a href="gallery.html">Галерея</a></li>
-				<li><a href="typo.html">Корисна інформація</a></li>
+				<li><a href="typo.html">Аренда землі</a></li>
 				<li><a href="contact.html">Контакти</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -88,7 +88,7 @@
 							<figcaption>
 								<h3>Соціальна політика</h3>
 								<p>Найкращі умови аренди землі</p>
-								<a href="about.html">більше...</a>
+								<a href="{% url 'about' %}">більше...</a>
 							</figcaption>
 						</figure>
 					</li>
@@ -117,7 +117,7 @@
 							<figcaption>
 								<h3>Унікальні технології</h3>
 								<p>використання точного землеробства</p>
-								<a href="about.html">більше...</a>
+								<a href="{% url 'about' %}">більше...</a>
 							</figcaption>
 						</figure>
 					</li>
@@ -146,7 +146,7 @@
 							<figcaption>
 								<h3>Наші умови</h3>
 								<p>Умови співпраці</p>
-								<a href="about.html">більше...</a>
+								<a href="{% url 'about' %}">більше...</a>
 							</figcaption>
 						</figure>
 					</li>
