--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -50,7 +50,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="{% url 'main' %}">Головна</a></li>
 				<li class="active"><a href="{% url 'about' %}">Про нас</a></li>
-				<li><a href="{% url 'main' %}">Новини</a></li>
+				<li><a href="{% url 'news' %}">Новини</a></li>
 				<li><a href="{% url 'main' %}">Галерея</a></li>
 				<li><a href="{% url 'main' %}">Аренда землі</a></li>
 				<li><a href="{% url 'main' %}">Контакти</a></li>
@@ -60,28 +60,7 @@
     </nav>
 <!-- /Fixed navbar -->
 <!-- banner section -->
-<div class="pogoSlider" id="js-main-slider">
-	<div class="pogoSlider-slide" data-transition="barRevealDown" data-duration="1000"  style="background-image:url(../../static/images/banner1-1.jpg);">
-		<div class="pogoSlider-slide-element">
-			<h3>Розвиток села - розвиток України</h3>
-		</div>
-	</div>
-	<div class="pogoSlider-slide" data-transition="blocksReveal" data-duration="1000" style="background-image:url(../../static/images/banner2-2.jpg);">
-		<div class="pogoSlider-slide-element">
-			<h3>Наша ціль - радість селян</h3>
-		</div>
-	</div>
-	<div class="pogoSlider-slide" data-transition="barRevealDown" data-duration="1000" style="background-image:url(../../static/images/banner3-3.jpg);">
-		<div class="pogoSlider-slide-element">
-			<h3>Праця біля землі - доктрина України</h3>
-		</div>
-	</div>
-	<div class="pogoSlider-slide" data-transition="blocksReveal" data-duration="1000"  style="background-image:url(../../static/images/banner4-4.jpg);">
-		<div class="pogoSlider-slide-element">
-			<h3>Без села, України не існує</h3>
-		</div>
-	</div>
-</div>
+{% include 'baner_not_index.html' %}
 <!-- /banner section -->
 <section class="about-us" id="about">
 	<h3 class="text-center slideanim">Про нас</h3>
