--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -48,7 +48,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li class="active"><a href="{% url 'main' %}">Головна</a></li>
 				<li><a href="{% url 'about' %}">Про нас</a></li>
-				<li><a href="{% url 'main' %}">Новини</a></li>
+				<li><a href="{% url 'news' %}">Новини</a></li>
 				<li><a href="{% url 'main' %}">Галерея</a></li>
 				<li><a href="{% url 'main' %}">Аренда землі</a></li>
 				<li><a href="{% url 'main' %}">Контакти</a></li>
