--- a/main/templates/main/news.html
+++ b/main/templates/main/news.html
@@ -77,7 +77,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 				</a>
 				<a href="blogpost.html" class="blog-link"><h3 class="ctitle">Закінчення посіву озимих культур</h3></a>
-				<p class="blog-p1"><small>Додано: 20 жовтня,2016.</small> | By: Admin - 3 Comments</p>
+				<p class="blog-p1"><small>Додано: 20 жовтня,2016.</small> | 3 коментаря</p>
 				<p class="blog-p2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 				<p class="blog-p3"><a href="blogpost.html" class="btn-outline">Read More</a></p>
 				<div class="hline"></div>
@@ -92,7 +92,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 				</a>
 				<a href="blogpost.html" class="blog-link"><h3 class="ctitle">Vegetable Farm, You'll Love it.</h3></a>
-				<p class="blog-p1"><small>Додано: 20 жовтня,2016.</small> | By: Admin - 3 Comments</p>
+				<p class="blog-p1"><small>Додано: 20 жовтня,2016.</small> | 3 коментаря</p>
 				<p class="blog-p2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 				<p class="blog-p3"><a href="blogpost.html" class="btn-outline">Read More</a></p>
 				<div class="hline"></div>
@@ -107,7 +107,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 				</a>
 				<a href="blogpost.html" class="blog-link"><h3 class="ctitle">Vegetable Farm, New & Improved.</h3></a>
-				<p class="blog-p1"><small>Додано: 20 жовтня,2016.</small> | By: Admin - 3 Comments</p>
+				<p class="blog-p1"><small>Додано: 20 жовтня,2016.</small> | 3 коментаря</p>
 				<p class="blog-p2">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 				<p class="blog-p3"><a href="blogpost.html" class="btn-outline">Read More</a></p>
 				<div class="hline"></div>
