--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -53,7 +53,7 @@
 				<li><a href="{% url 'news' %}">Новини</a></li>
 				<li><a href="{% url 'main' %}">Галерея</a></li>
 				<li><a href="{% url 'main' %}">Аренда землі</a></li>
-				<li><a href="{% url 'main' %}">Контакти</a></li>
+				<li><a href="{% url 'contact' %}">Контакти</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
