--- a/main/templates/main/news.html
+++ b/main/templates/main/news.html
@@ -51,7 +51,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<li class="active"><a href="{% url 'news' %}">Новини</a></li>
 				<li><a href="{% url 'main' %}">Галерея</a></li>
 				<li><a href="{% url 'main' %}">Аренда землі</a></li>
-				<li><a href="{% url 'main' %}">Контакти</a></li>
+				<li><a href="{% url 'contact' %}">Контакти</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
